wip: more server fixes, changes
