# docs/swagger.json
@@ -261,6 +261,99 @@
                 }
             }
         },
+        "/auth/session/{server}/challenge": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Server Identifier",
+                        "name": "server",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/router.RequestError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/router.RequestError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/router.RequestError"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/session/{server}/verify": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Server Identifier",
+                        "name": "server",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/router.RequestError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/router.RequestError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/router.RequestError"
+                        }
+                    }
+                }
+            }
+        },
         "/resource-categories/": {
             "get": {
                 "consumes": [
@@ -314,6 +407,15 @@
                 "tags": [
                     "resource"
                 ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Resource Category Identifier",
+                        "name": "category",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -352,6 +454,15 @@
                 ],
                 "tags": [
                     "resource"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Resource Version Identifier",
+                        "name": "version",
+                        "in": "path",
+                        "required": true
+                    }
                 ],
                 "responses": {
                     "200": {
@@ -423,6 +534,54 @@
                 }
             }
         },
+        "/resources/:resource/updates": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "resource"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Resource Identifier",
+                        "name": "resource",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ResourceUpdate"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/router.RequestError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/router.RequestError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/router.RequestError"
+                        }
+                    }
+                }
+            }
+        },
         "/resources/{resource}": {
             "get": {
                 "consumes": [
@@ -433,6 +592,15 @@
                 ],
                 "tags": [
                     "resource"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Resource Identifier",
+                        "name": "resource",
+                        "in": "path",
+                        "required": true
+                    }
                 ],
                 "responses": {
                     "200": {
@@ -472,6 +640,15 @@
                 ],
                 "tags": [
                     "resource"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Resource Identifier",
+                        "name": "resource",
+                        "in": "path",
+                        "required": true
+                    }
                 ],
                 "responses": {
                     "200": {
@@ -514,6 +691,15 @@
                 ],
                 "tags": [
                     "resource"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Resource Identifier",
+                        "name": "resource",
+                        "in": "path",
+                        "required": true
+                    }
                 ],
                 "responses": {
                     "200": {
@@ -597,6 +783,17 @@
                 "tags": [
                     "server"
                 ],
+                "parameters": [
+                    {
+                        "description": "Server Object",
+                        "name": "server",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.Server"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -636,6 +833,15 @@
                 "tags": [
                     "server"
                 ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Server Identifier",
+                        "name": "server",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -673,82 +879,27 @@
                 "tags": [
                     "server"
                 ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Server Identifier",
+                        "name": "server",
+                        "in": "path",
+                        "required": true
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    {
+                        "description": "Server Object",
+                        "name": "server",
+                        "in": "body",
+                        "required": true,
                         "schema": {
-                            "$ref": "#/definitions/router.RequestError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/router.RequestError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/router.RequestError"
+                            "$ref": "#/definitions/domain.Server"
                         }
                     }
-                }
-            }
-        },
-        "/servers/{server}/client/join": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "server"
                 ],
                 "responses": {
                     "204": {
                         "description": "No Content"
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/router.RequestError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/router.RequestError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/router.RequestError"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "server"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -782,6 +933,15 @@
                 "tags": [
                     "server"
                 ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Server Identifier",
+                        "name": "server",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "204": {
                         "description": "No Content"
@@ -815,6 +975,15 @@
                 ],
                 "tags": [
                     "server"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Server Identifier",
+                        "name": "server",
+                        "in": "path",
+                        "required": true
+                    }
                 ],
                 "responses": {
                     "204": {
@@ -852,6 +1021,22 @@
                 "tags": [
                     "server"
                 ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Server Identifier",
+                        "name": "server",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Client Identifier",
+                        "name": "client",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "204": {
                         "description": "No Content"
@@ -888,6 +1073,24 @@
                 "tags": [
                     "server"
                 ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Server Identifier",
+                        "name": "server",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Data Object",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
                 "responses": {
                     "204": {
                         "description": "No Content"
@@ -923,6 +1126,15 @@
                 ],
                 "tags": [
                     "server"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Server Identifier",
+                        "name": "server",
+                        "in": "path",
+                        "required": true
+                    }
                 ],
                 "responses": {
                     "204": {
@@ -1238,6 +1450,32 @@
                 }
             }
         },
+        "domain.ResourceUpdate": {
+            "type": "object",
+            "properties": {
+                "attach_count": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "post_Date": {
+                    "type": "integer"
+                },
+                "resource_id": {
+                    "type": "integer"
+                },
+                "resource_update_id": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "view_url": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.ResourceVersion": {
             "type": "object",
             "properties": {
@@ -1298,7 +1536,10 @@
                 "is_visible": {
                     "type": "boolean"
                 },
-                "last_sync_time": {
+                "last_Update_date": {
+                    "type": "integer"
+                },
+                "last_sync_date": {
                     "type": "integer"
                 },
                 "max_clients": {
