# router/router_auth.go
@@ -16,13 +16,26 @@
 package router
 
 import (
+	"carbon/config"
 	"carbon/domain"
 	"carbon/remote"
 	"net/http"
 	"time"
 
 	"github.com/gin-gonic/gin"
+	"github.com/golang-jwt/jwt/v5"
 )
+
+// UserAuthSessionChallengeClaims represents the high level definition for the
+// claims associated with a authentication session challenge.
+type UserAuthSessionChallengeClaims struct {
+	// The user ID associated with the challenge.
+	UserID int `json:"uid"`
+	// The server ID associated with the challenge.
+	ServerID int `json:"sid"`
+	// The typical JWT claims.
+	jwt.RegisteredClaims
+}
 
 // UserAuthRequest The low level definition for a typical log in request.
 type UserAuthRequest struct {
@@ -51,7 +64,8 @@ type UserAuthRefreshRequest struct {
 	RefreshToken string `json:"refresh_token" binding:"required"`
 }
 
-// ShowAccount godoc
+// postAuthLogin godoc
+//
 //	@Tags		auth
 //	@Accept		json
 //	@Produce	json
@@ -107,7 +121,8 @@ func postAuthLogin(c *gin.Context) {
 	c.JSON(http.StatusOK, authResponse)
 }
 
-// ShowAccount godoc
+// postAuthLogout godoc
+//
 //	@Tags		auth
 //	@Accept		json
 //	@Produce	json
@@ -124,7 +139,8 @@ func postAuthLogout(c *gin.Context) {
 	c.Status(http.StatusNoContent)
 }
 
-// ShowAccount godoc
+// postAuthRefresh godoc
+//
 //	@Tags		auth
 //	@Accept		json
 //	@Produce	json
@@ -175,4 +191,99 @@ func postAuthRefresh(c *gin.Context) {
 		"login_token":   newToken.LoginToken,
 		"refresh_token": newToken.RefreshToken,
 	})
+}
+
+// postAuthSessionChallenge godoc
+//
+//	@Tags		auth
+//	@Accept		json
+//	@Produce	json
+//	@Param		server	path		string	true	"Server Identifier"
+//	@Success	200		{object}	string
+//	@Failure	400		{object}	RequestError
+//	@Failure	404		{object}	RequestError
+//	@Failure	500		{object}	RequestError
+//	@Router		/auth/session/{server}/challenge [post]
+func postAuthSessionChallenge(c *gin.Context) {
+	user := ExtractUser(c)
+	server := ExtractServer(c)
+
+	// The player wants his client to start a chllange so the server
+	// can verify their session against us. The challenge should only
+	// last 10 seconds, and we should verify his claims against ours.
+	claims := UserAuthSessionChallengeClaims{
+		UserID:   user.UserID,
+		ServerID: server.ServerID,
+		RegisteredClaims: jwt.RegisteredClaims{
+			ExpiresAt: jwt.NewNumericDate(time.Now().Add(10 * time.Second)),
+			IssuedAt:  jwt.NewNumericDate(time.Now()),
+		},
+	}
+
+	challenge := jwt.NewWithClaims(jwt.SigningMethodHS256, claims)
+	signedChallenge, err := challenge.SignedString([]byte(config.Get().Secret))
+	if err != nil {
+		NewError(err).Abort(c)
+		return
+	}
+
+	c.String(http.StatusOK, signedChallenge)
+}
+
+// getAuthSessionVerify godoc
+//
+//	@Tags		auth
+//	@Accept		json
+//	@Produce	json
+//	@Param		server	path	string	true	"Server Identifier"
+//	@Success	204		"No Content"
+//	@Failure	400		{object}	RequestError
+//	@Failure	404		{object}	RequestError
+//	@Failure	500		{object}	RequestError
+//	@Router		/auth/session/{server}/verify [get]
+func getAuthSessionVerify(c *gin.Context) {
+	server := ExtractServer(c)
+
+	var data struct {
+		Challenge string `json:"challenge"`
+	}
+
+	if err := c.BindJSON(&data); err != nil {
+		return
+	}
+
+	claims := &CustomClaims{}
+	challenge, err := jwt.ParseWithClaims(data.Challenge, claims, func(token *jwt.Token) (interface{}, error) {
+		return []byte(config.Get().Secret), nil
+	})
+
+	if err != nil {
+		NewError(err).Abort(c)
+		return
+	}
+
+	if !challenge.Valid {
+		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{
+			"error": "The provided challenge could not be validated.",
+		})
+		return
+	}
+
+	if claims.ExpiresAt.Time.Before(time.Now()) {
+		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{
+			"error": "The provided challenge has already expired.",
+		})
+		return
+	}
+
+	// Make sure we don't allow a potential clash when a server may
+	// attempt to process a challenge for another server.
+	if server.ServerID != claims.ServerID {
+		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{
+			"error": "The provided challenge has claims that could not be validated.",
+		})
+		return
+	}
+
+	c.Status(http.StatusNoContent)
 }
